[metadata]
name = redis_exporter
author = Yuri Batsura
author-email = senswers@gmail.com
maintainer = Yuri Batsura
maintainer-email = senswers@gmail.com
summary = prometheus metric exporter for Redis DB
description-file = README.md
home-page = https://github.com/equinsuocha/redis_exporter
requires-python = >=3.7